<resources>
    <string name="app_name">CoronaVirus2</string>
    <!--  **************************** interface activity_main *************************-->
    <string name="titre">CONSEILS</string>
    <string name="txt">Comment se protéger et protéger les autres au quotidien ?</string>
    <string name="c1">Respectez au maximum les mesures de distanciation sociales."</string>
    <string name="c2">Portez un masque.</string>
    <string name="c3">Limitez les interactions sociales, certaines personnes transmettent le virus sans en ressentir les symptômes.</string>
    <string name="c4">Lavez-vous très régulièrement les mains.</string>
    <string name="c5">Toussez ou éternuez dans votre coude ou dans un mouchoir.</string>
    <string name="c6">Utilisez un mouchoir à usage unique et jetez-le.</string>
    <string name="c7"> Saluez sans serrer la main, n\'embrassez personne.</string>
    <string name="btn">Test</string>
    <!--  **************************** interface activity_information *************************-->
    <string name="information">Informations</string>
    <string name="Txtinfo">Il s\'agit d\'une application qui aide l\'opérateur à savoir s\'il présente des signes d\'un virus de la Corona virus en entrant les symptômes en remplissant un formulaire après cela il vous indique si vous avez des symptômes de ce virus ou non.</string>
    <string name="demmarer">Demmarer le test</string>
    <!--  **************************** interface activity_questionnaire *************************-->
    <string name="q1">Ces dernières 48 heures, quelle a été votre température la plus élevée ?</string>
    <string name="q2">Ces derniers jours, avez-vous une toux ou votre toux habituelle s’est-elle modifiée ?</string>
    <string name="q3">Ces derniers jours, avez-vous noté une perte ou une forte diminution de votre goût ou de votre odorat ?</string>
    <string name="q4">Ces derniers jours, avez-vous eu un mal de gorge et/ou des douleurs musculaires et/ou des courbatures inhabituelles et/ou des maux de tête inhabituels ?</string>
    <string name="q5">Ces derniers jours, avez-vous une fatigue inhabituelle ?</string>
    <string name="q6">Depuis 24 heures ou plus, êtes-vous dans l\'impossibilité de vous alimenter ou de boire ?</string>
    <string name="q7">Ces dernières 24 heures, avez-vous noté un manque de souffle inhabituel lorsque vous parlez ou faites un petit effort ?</string>
    <string name="q8">Avez-vous un diabète mal équilibré ou avec des complications (yeux, reins) ?</string>
    <string name="q9">Êtes-vous une femme enceinte au 3ème trimestre de votre grossesse ?</string>
    <string name="q10">Avez-vous une cirrhose ?</string>
    <string name="terminer">Terminer</string>
    <!--  **************************** interface activity_resultatnegatif *************************-->
    <string name="titre2">RESULTAT</string>
    <string name="rq">La recommandation affichée peut évoluer suivant les informations en provenance des autorités de santé et des chercheurs. Elle ne constitue pas un avis médical. En cas de doute, demandez conseil à votre médecin ou pharmacien.</string>
    <string name="resultatnigative">Votre état ne semble pas préoccupant ou ne relève probablement pas du COVID 19.</string>
    <!--  **************************** interface activity_resultatpositif *************************-->
    <string name="resultatpositif">Votre situation peut relever d’un COVID 19. Vos symptômes nécessitent une prise en charge rapide.</string>
    <!--  **************************** interface activity_fin *************************-->
    <string name="fin">Merci pour votre confiance, nous souhaitons santé et bien-être à tous</string>
    <string name="fermer">Fermer</string>
    <!--  **************************** interface inscription *************************-->
    <string name="inscription">Inscription</string>
    <string name="name">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="account">vous avez un compte?</string>
    <string name="connecter">se connecter</string>
    <string name="nomO">Le nom est obligatoire!</string>
    <string name="prenomO">Le prenom est obligatoire!</string>
    <string name="emailO">Email est obligatoire!</string>
    <string name="emailOO">S\'il vous plaît, mettez une adresse email valide!</string>
    <string name="pass">Mot de passe est obligatoire!</string>
    <string name="passs">Mot de passe Doit être> = 6 caractères!</string>
    <string name="us">l\'utilisateur créé</string>
    <!--  **************************** interface login *************************-->
    <string name="authz">Authentification</string>
    <string name="naccount">vous n\'avez pas de compte?</string>
    <string name="cn">Connexion réussie!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Go to Home Activity</string>
    <string name="action_search">Searching</string>
    <string name="action_item_a">Item A</string>
    <string name="action_item_b">Item B</string>
</resources>