<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".information">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="9dp">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/information" />

            <TextView
                android:id="@+id/titreInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/information"
                android:textColor="#0000FF"
                android:textStyle="bold"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Txtinfo"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="22dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

            <Button

                android:id="@+id/button"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_margin="10dp"
                android:onClick="envoyer"
                android:text="@string/demmarer"
                android:textSize="20dp"
                app:backgroundTint="#3F51B5"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="610dp"
                tools:ignore="OnClick" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>