<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="9dp">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/qttt"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/titre2"
                android:textColor="#0000FF"
                android:textStyle="bold"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="60dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/purple_200">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:layout_margin="25dp"
                    android:text="@string/rq"
                    tools:layout_editor_absoluteX="154dp"
                    tools:layout_editor_absoluteY="264dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_margin="25dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/resultatpositif"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
            <Button
                android:id="@+id/button"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:text="Terminer"
                android:textSize="25dp"
                app:backgroundTint="#3F51B5"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="610dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>